fixed some well-alt issues on smaller screens, still buggy; fixed new-message placeholder bug

--- a/public/css/site.less
+++ b/public/css/site.less
@@ -150,6 +150,13 @@ h1 {
   }
 }
 
+.well-effect() {
+  border: 1px solid #e3e3e3;
+  border-radius: 4px;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
+}
+
 #chat.well-alt {
   header {
     background-color: white;
@@ -163,20 +170,14 @@ h1 {
     width: 100%;
     max-width: 480px;
     pointer-events: none; /* doesn't work in IE */
-
-    /* well effect */
-    border: 1px solid #e3e3e3;
-    border-radius: 4px;
-
-    -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
-    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
-
+    .well-effect();
   }
 
   .content {
     padding: 15px;
     background-color: #f5f5f5;
     border: none;
+    border-radius: 4px;
   }
 
   footer {
@@ -216,8 +217,23 @@ h1 {
 }
 
 @media (max-height: 320px) {
-  #chat header,
-  #chat footer {
-    position: absolute;
+  #chat {
+    header,
+    footer {
+      position: absolute;
+    }
+  }
+
+  #chat.well-alt {
+    #chat-viewport {
+      position: absolute;
+      border: none;
+      box-shadow: none;
+      -webkit-box-shadow: none;
+    }
+
+    .content {
+      .well-effect();
+    }
   }
 }
